/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package k8s.io.sample_apiserver.pkg.apis.wardle.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message Fischer {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // DisallowedFlunders holds a list of Flunder.Names that are disallowed.
  repeated string disallowedFlunders = 2;
}

// FischerList is a list of Fischer objects.
message FischerList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Fischer items = 2;
}

message Flunder {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional FlunderSpec spec = 2;

  optional FlunderStatus status = 3;
}

// FlunderList is a list of Flunder objects.
message FlunderList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Flunder items = 2;
}

message FlunderSpec {
  // A name of another flunder or fischer, depending on the reference type.
  optional string reference = 1;

  // The reference type, defaults to "Flunder" if reference is set.
  optional string referenceType = 2;
}

message FlunderStatus {
}

